k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-ui
spec:
  type: NodePort
  selector:
    app: frontend-ui
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30010
